Calendar Module 7.x
==================

=================
Version 7.x-2.x-dev
=================

- Issue #1188688 by TommyChris, Fix incorrectly-named view object in calendar_plugin_style_ical.inc.
- Issue #1110012 Remove 'parent' items from Views plugins, no longer needed? See if this fixes the issue.
- Issue #1161844 by AntoineSolutions, Use the same switch for Multiday as for the standard calendar when processing year view.
- Issue #1114730 by jomski, PHP 5.3 requires that we initialize the $items array in template_preprocess_calendar().
- The delta value was not being computed or added correctly.
- Issue #1137538, by westbywest: Fix incorrect value for 'delta' in calendar_plugin_style.inc.

======================
Version 7.x-2.0-alpha1
======================

- Issue #1137538 Views renamed 'wildcard' to 'exception'.
- Issue #1135064 by Niremizov and KarenS, Don't try to get ui_name() before handler is initialized to avoid fatal errors when editing settings.
- Add date fields to the calendar view so we can process them normally.
- More cleanup of ical, by ankur and KarenS.
- Issue #1096224 Make sure we don't get notice on views that have no rendered fields.
- Issue #1087528 by thekevinday and KarenS, clean up ical handling.
- A little reorganization to get a shared function out of theme.inc.
- Rework calendar node processing to use ->style_plugin->render_fields() instead of trying to render them individually. Probably still some work to do on this change, but it cleans things up and prevents accidentally tromping on other fields in the view.
- Moved a variable we still need in the navigation, move it back.
- Issue #1130966, re-organize the theme processing so it the day and week views work right in the new Views preview pane.
- Issue #1119752 by cezaryrk, Eliminate Views token handling errors when manually theming calendar items.
- Views renamed 'wildcard' to 'exception'.