@@ -8,6 +8,7 @@
  * $day_names: An array of the day of week names for the table header.
  * $rows: An array of data for each day of the week.
  * $view: The view.
+ * $calendar_links: Array of formatted links to other calendar displays - year, month, week, day.
  * $display_type: year, month, day, or week.
  * $block: Whether or not this calendar is in a block.
  * $min_date_formatted: The minimum date for this calendar in the format YYYY-MM-DD HH:MM:SS.
@@ -19,7 +20,7 @@
 //dsm('Display: '. $display_type .': '. $min_date_formatted .' to '. $max_date_formatted);
 ?>
 <div class="calendar-calendar"><div class="month-view">
-<table>
+<table class="full">
   <thead>
     <tr>
       <?php foreach ($day_names as $cell): ?>
@@ -30,15 +31,26 @@
     </tr>
   </thead>
   <tbody>
-    <?php foreach ((array) $rows as $row): ?>
-      <tr>
-        <?php foreach ($row as $cell): ?>
-          <td id="<?php print $cell['id']; ?>" class="<?php print $cell['class']; ?>">
-            <?php print $cell['data']; ?>
-          </td>
-        <?php endforeach; ?>
-      </tr>
-    <?php endforeach; ?>
+    <?php 
+      foreach ((array) $rows as $row) {
+        print $row['data'];
+      } ?>
   </tbody>
 </table>
 </div></div>
+<script>
+try {
+  // ie hack to make the single day row expand to available space
+  if ($.browser.msie ) {
+    var multiday_height = $('tr.multi-day')[0].clientHeight; // Height of a multi-day row
+    $('tr[iehint]').each(function(index) {
+      var iehint = this.getAttribute('iehint');
+      // Add height of the multi day rows to the single day row - seems that 80% height works best
+      var height = this.clientHeight + (multiday_height * .8 * iehint); 
+      this.style.height = height + 'px';
+    });
+  }
+}catch(e){
+  // swallow 
+}
+</script>
